# QuanticOS

./: CMakeLists.txt  LICENSE  README.md  iso.sh
kernel/: CMakeLists.txt  Makefile
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: CMakeLists.txt  tty.c
kernel/kernel/: CMakeLists.txt  kernel.c
libc/: CMakeLists.txt
libc/include/sys/: cdefs.h
libc/stdio/: CMakeLists.txt  putchar.c
libc/stdlib/: CMakeLists.txt  abort.c
libc/string/: CMakeLists.txt
support/: iso.sh
support/cmake/: gcc-cmake-toolchain.cmake
support/oldBuildSys/: KERNEL_Makefile  LIBC_Makefile  clean.sh  default-host.sh  qemu.sh
